feat(validation-key): verify oidf-service JWT with per-instance config key
  Each instance can now declare oidf_service_api_validation_key, a public
  key used to verify signed JWT responses from its oidf-service node.
  Previously fetchServiceKeys relied on self-verification (keys embedded
  in the JWT itself), which offers no external trust anchor.

  - InstanceProperties gains oidfServiceApiValidationKey (KeyEntry, optional)
  - InstancePlacementService.resolveValidationKey() resolves the JWK by org
  - JwksKeysCacheService looks up the key before each fetch and throws
    IllegalStateException if the instance has no key configured
  - OidfServiceIntegration.fetchServiceKeys(EntityID, JWK) now requires an
    explicit validation key — self-verification removed
  - docs/configuration.md updated with property table and YAML examples